--- a/assignment7/assignment7.css
+++ b/assignment7/assignment7.css
@@ -50,7 +50,7 @@ copy{
 	font-weight: normal;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif"
 }
-@media screen and (max-width:420px){/*for smaller devices*/
+@media screen and (max-width:420px){
 	#container {
 		width: 420px;
 		height: 900px;
